# ttnn-op-runtime-predictor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  install_dependencies.sh  main.cpp  pyproject.toml
.github/workflows/: on-push.yml
interface/: CMakeLists.txt  interface.hpp  interface_json_utils.cpp  interface_json_utils.hpp
interface-pybind/: CMakeLists.txt  get_runtime_from_model_pybind.cpp  usage.py
interface/include/: interface.hpp
interface/op_categories/: op_categories.json
interface/src/: interface.cpp
mlpack/: CMakeLists.txt  reshard.cpp  test_mlpregress.cpp
mlpack/reshard_models/: README.md  block_row_major_height_row_major.pkl
ops/: CMakeLists.txt
ops/include/: model.hpp  ops.hpp
ops/src/: ops.cpp
pybind/: get_runtime_from_model_pybind.cpp
python/: exp_generate_dataset.py  generate_mlp_dataset  mlpregress.py
python/exp/: exp_train.py
scripts/: CMakeLists.txt  test_script.sh  track_metal_info.sh
tests/: CMakeLists.txt  test_interface.cc  test_interface.cpp
train/mlpack/: CMakeLists.txt  compile_mac.sh  reshard.cpp  test_mlpregress.cpp  train.py  train_new_mlp.cpp
train/mlpack/model-regeneration/: CMakeLists.txt  mlp_config.json  mlp_config_utils.hpp  retrain_mlp.cpp  train_mlp_utils.hpp  train_new_mlp.cpp
train/python/: matmul_height_sharded.csv  mlpregress.py
train/python/exp/: big_exp_dataset.csv  exp_generate_dataset.py  exp_model.pkl  exp_train.py  final_exp_dataset.csv  final_exp_dataset_ord.csv
train/python/model-regeneration/: create_dataset.py  create_dataset_concatenate_heads.py  create_dataset_create_qkv_heads.py  create_dataset_eltwise_unary.py  create_dataset_matmul.py  create_dataset_paged_sdpa_decode.py  create_dataset_utils.py
train/python/model-regeneration/dataset_sweeps/: concatenate_heads_sweep.py  create_qkv_heads_sweep.py  exp_sweep.py  paged_sdpa_decode_sweep.py
